crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT q1, coalesce(generate_series(1,3), 0) FROM int8_tbl;"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..43
    CoalesceExpr@11..43
      Coalesce@11..19 "coalesce"
      Ascii40@19..20 "("
      FuncCall@20..39
        Ident@20..35 "generate_series"
        Ascii40@35..36 "("
        AConst@36..37
          Iconst@36..37 "1"
        Ascii44@37..38 ","
        AConst@38..39
          Iconst@38..39 "3"
      Ascii41@39..40 ")"
      Ascii44@40..41 ","
      Whitespace@41..42 " "
      AConst@42..43
        Iconst@42..43 "0"
  Ascii41@43..44 ")"
  Whitespace@44..45 " "
  From@45..49 "FROM"
  Whitespace@49..50 " "
  RangeVar@50..58
    Ident@50..58 "int8_tbl"
  Ascii59@58..59 ";"

