crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT dataa, datab b, generate_series(1,2) g, count(*) FROM few GROUP BY CUBE(dataa, datab);"
---
SelectStmt@0..93
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..12
    ColumnRef@7..12
      Ident@7..12 "dataa"
  Ascii44@12..13 ","
  Whitespace@13..14 " "
  ResTarget@14..21
    ColumnRef@14..19
      Ident@14..19 "datab"
    Whitespace@19..20 " "
    Ident@20..21 "b"
  Ascii44@21..22 ","
  Whitespace@22..23 " "
  ResTarget@23..45
    FuncCall@23..42
      Ident@23..38 "generate_series"
      Ascii40@38..39 "("
      AConst@39..40
        Iconst@39..40 "1"
      Ascii44@40..41 ","
      AConst@41..42
        Iconst@41..42 "2"
    Ascii41@42..43 ")"
    Whitespace@43..44 " "
    Ident@44..45 "g"
  Ascii44@45..46 ","
  Whitespace@46..47 " "
  ResTarget@47..54
    FuncCall@47..54
      Ident@47..52 "count"
      Ascii40@52..53 "("
      Ascii42@53..54 "*"
  Ascii41@54..55 ")"
  Whitespace@55..56 " "
  From@56..60 "FROM"
  Whitespace@60..61 " "
  RangeVar@61..64
    Ident@61..64 "few"
  Whitespace@64..65 " "
  GroupP@65..70 "GROUP"
  Whitespace@70..71 " "
  By@71..73 "BY"
  Whitespace@73..74 " "
  GroupingSet@74..91
    Cube@74..78 "CUBE"
    Ascii40@78..79 "("
    ColumnRef@79..84
      Ident@79..84 "dataa"
    Ascii44@84..85 ","
    Whitespace@85..86 " "
    ColumnRef@86..91
      Ident@86..91 "datab"
  Ascii41@91..92 ")"
  Ascii59@92..93 ";"

