crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@46.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'foo' as f, generate_series(1,2) as g from few order by 1;"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..17
    AConst@7..12
      Sconst@7..12 "'foo'"
    Whitespace@12..13 " "
    As@13..15 "as"
    Whitespace@15..16 " "
    Ident@16..17 "f"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..44
    FuncCall@19..38
      Ident@19..34 "generate_series"
      Ascii40@34..35 "("
      AConst@35..36
        Iconst@35..36 "1"
      Ascii44@36..37 ","
      AConst@37..38
        Iconst@37..38 "2"
    Ascii41@38..39 ")"
    Whitespace@39..40 " "
    As@40..42 "as"
    Whitespace@42..43 " "
    Ident@43..44 "g"
  Whitespace@44..45 " "
  From@45..49 "from"
  Whitespace@49..50 " "
  RangeVar@50..53
    Ident@50..53 "few"
  Whitespace@53..54 " "
  SortBy@54..64
    Order@54..59 "order"
    Whitespace@59..60 " "
    By@60..62 "by"
    Whitespace@62..63 " "
    AConst@63..64
      Iconst@63..64 "1"
  Ascii59@64..65 ";"

