crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO fewmore VALUES(generate_series(4,5));"
---
InsertStmt@0..49
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "fewmore"
  Whitespace@19..20 " "
  SelectStmt@20..46
    Values@20..26 "VALUES"
    Ascii40@26..27 "("
    List@27..46
      FuncCall@27..46
        Ident@27..42 "generate_series"
        Ascii40@42..43 "("
        AConst@43..44
          Iconst@43..44 "4"
        Ascii44@44..45 ","
        AConst@45..46
          Iconst@45..46 "5"
  Ascii41@46..47 ")"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

