crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM fewmore;
---
SelectStmt@0..22
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..21
    Ident@14..21 "fewmore"
  Ascii59@21..22 ";"

