crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select generate_series(1,3)+1 order by generate_series(1,3);"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..29
    AExpr@7..29
      FuncCall@7..26
        Ident@7..22 "generate_series"
        Ascii40@22..23 "("
        AConst@23..24
          Iconst@23..24 "1"
        Ascii44@24..25 ","
        AConst@25..26
          Iconst@25..26 "3"
      Ascii41@26..27 ")"
      Ascii43@27..28 "+"
      AConst@28..29
        Iconst@28..29 "1"
  Whitespace@29..30 " "
  SortBy@30..58
    Order@30..35 "order"
    Whitespace@35..36 " "
    By@36..38 "by"
    Whitespace@38..39 " "
    FuncCall@39..58
      Ident@39..54 "generate_series"
      Ascii40@54..55 "("
      AConst@55..56
        Iconst@55..56 "1"
      Ascii44@56..57 ","
      AConst@57..58
        Iconst@57..58 "3"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

